vlib/v/checker/tests/struct_type_is_private_err.vv
import sqlite

fn main(){
	_ := &C.sqlite3{}
}
